// Copyright 2022 The Tari Project
// SPDX-License-Identifier: BSD-3-Clause

syntax = "proto3";

package tari.types;

// Define the data type that is used to store results of `Blake256`
message HashOutput {
    bytes data = 1;
}

// Commitment wrapper
message Commitment {
    bytes data = 1;
}

// Define the explicit Signature implementation for the Tari base layer. A different signature scheme can be
// employed by redefining this type.
message Signature {
    bytes public_nonce = 1;
    bytes signature = 2;
}

// Signature containing the signer that signed it
message SignerSignature {
    bytes signer = 1;
    Signature signature = 2;
}

// Define the explicit ComSignature implementation for the Tari base layer. A different signature scheme can be
// employed by redefining this type.
message ComSignature {
    bytes public_nonce_commitment = 1;
    bytes signature_u = 2;
    bytes signature_v = 3;
}

// BlindingFactor wrapper
message BlindingFactor {
    bytes data = 1;
}